--- a/css/components/components.scss
+++ b/css/components/components.scss
@@ -1,10 +1,19 @@
+@import "../variables/variables.scss";
+
 @mixin button {
-    margin: $sm;
     padding: $md;
     text-align: center;
     vertical-align: center;
-    color: #fff;
+    font-weight: $bold;
+    font-size: $h2;
+    color: #ffffff;
     background: $confirmation;
+    border: none;
+    cursor: pointer;
+    transition: .2s ease-in-out;
+    &:hover {
+        filter: brightness(.8);
+    }
 }
 
 @mixin card {
