--- a/css/main-page-css/home-page.css
+++ b/css/main-page-css/home-page.css
@@ -106,6 +106,10 @@ nav .nav-right-side ul li:nth-child(3):hover {
   display: flex;
   padding: 2rem;
   justify-content: center;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 .flex-container .heading-ads .heading {
   width: 20%;
