--- a/css/main-page-css/home-page.scss
+++ b/css/main-page-css/home-page.scss
@@ -16,13 +16,15 @@ body {
 
 nav {
   display: flex;
+  position: fixed;
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 20%;
+  height: 5%;
   padding: $md 0;
   background: #fff;
-  box-shadow: 0 $bssm $bssm #0000002a;
+  box-shadow: $bsxs;
+  z-index: 1;
   .nav-left-side {
     margin-left: $lg;
     font-size: $h1;
@@ -114,5 +116,19 @@ nav {
         }
       }
     }
+}
+
+.card-flex-container {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  padding: $xl 0;
+  .job {
+    @include card;
+    .role-pill {
+      @include pill;
+    }
+  }
+
 }
 
