--- a/css/variables/variables.scss
+++ b/css/variables/variables.scss
@@ -27,8 +27,8 @@ $lg: 1.2rem;
 $xl: 2rem;
 
 //SHADOW
-$bsxs: 2px 2px 5px #00000073;
-$bssm: 5px 5px 5px #00000073;
-$bsmd: 10px 10px 10px #00000073;
-$bslg: 15px 15px 15px #00000073;
-$bsxl: 20px 20px 20px #00000073;
+$bsxs: 0 2px 5px #00000073;
+$bssm: 0 5px 5px #00000073;
+$bsmd: 0 10px 10px #00000073;
+$bslg: 0 15px 15px #00000073;
+$bsxl: 0 20px 20px #00000073;
